[package]
name = "automata-runtime-traits"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-support = { default-features = false, version = '3.0.0' }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
]
