[package]
name = "example-enclave-hello"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"
license = "Apache-2.0"

[package.metadata.enclave]
config = "Enclave.config.xml"
edl = "Enclave.edl"
linker-script = "Enclave.lds"

[lib]
crate-type = [
    "staticlib", # primary type
    # FIXME: delete or enable this comment
    # "rlib", # dummy type used to suppress cargo warning on `no linkable target`
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_tstd          = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs"] }
sgx_types         = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", package = "sgx_tcrypto_helper" }
sgx_rand          = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts          = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tkey_exchange = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[build-dependencies]
geode-builder = { path = "../../"}